[gd_scene load_steps=9 format=3 uid="uid://c3cfdbjw82eeg"]

[ext_resource type="Script" path="res://Scripts/gpu_boss.gd" id="1_60e40"]
[ext_resource type="Texture2D" uid="uid://qubexx78xd8e" path="res://Sprites/Characters/Gpu_Boss.png" id="1_smbnw"]
[ext_resource type="PackedScene" uid="uid://cq1e21emss80p" path="res://Scenes/health_bar.tscn" id="3_5n8sm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6qry"]
atlas = ExtResource("1_smbnw")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp80a"]
atlas = ExtResource("1_smbnw")
region = Rect2(0, 96, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_0tfdn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6qry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp80a")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g042n"]
size = Vector2(84, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhaaq"]
size = Vector2(84, 33)

[node name="gpu_boss" type="CharacterBody2D"]
script = ExtResource("1_60e40")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0tfdn")
frame_progress = 0.143109

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_g042n")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_yhaaq")
debug_color = Color(0.967201, 2.88785e-07, 0.475751, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("3_5n8sm")]
offset_top = 22.0
offset_bottom = 25.0

[node name="spawn_c" type="Marker2D" parent="."]
position = Vector2(-1, 0)

[node name="spawn_r" type="Marker2D" parent="."]
position = Vector2(23, 0)

[node name="spawn_l" type="Marker2D" parent="."]
position = Vector2(-25, 0)

[node name="cooldown" type="Timer" parent="."]
wait_time = 4.0

[node name="move_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
